<resources>
    <string name="app_name">Split Bills</string>
    <string name="my_prefs">My Shared Preferences</string>
    <string name="phoneNumSaved">Phone number saved</string>
    <string name="tabTitle">Tab Title</string>
    <string name="username">Username</string>
    <string name="phoneNum">Phone Number</string>
    <string name="photoUrl">Photo Url</string>
    <string name="email">User email</string>
    <string name="userUID">User UID</string>
    <string name="invite">Invite</string>
    <string name="custom">custom</string>
    <string name="sms">SMS</string>
    <string name="e_mail">E-mail</string>
    <string name="choose_method">choose method</string>
    <string name="send_invite">send invite</string>
    <string name="loading_contacts">loading contacts</string>
    <string name="loading_friends">Loading Friends</string>
    <string name="name">name</string>
    <string name="search">search</string>
</resources>
